--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>This is new repo.</p>
-    <p>This is new feature repo.</p>
+    <p>This is new feature repo. (button)</p>
 </body>
 </html>
